--- a/platformio.ini
+++ b/platformio.ini
@@ -16,3 +16,4 @@ lib_deps =
 	paulstoffregen/OneWire@^2.3.8
 	milesburton/DallasTemperature@^3.11.0
 	arduino-libraries/ArduinoHttpClient@^0.5.0
+	bblanchon/ArduinoJson@^7.0.3
